--- a/my-profile.html
+++ b/my-profile.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -51,13 +53,67 @@
       </div>
     </div>
   </nav>
+  <div class="text-center p-4">
+    <h2>Mi Perfil</h2>
+    <p class="lead">Estos son tus datos de contacto.</p>
+  </div>
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 7 (Fecha de entrega: 8/11/202020) -> Punto 1 y 2.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <div class="row">
+      <div class="col"><img id="imagenPerfil" src="" alt=""></div>
+      <div class="col">
+        <div class="row"><h1 id="userPerfil">Usuario</h1></div>
+        <div class="row"><p id="namePerfil">Nombre Apellido</p></div>
+      </div>
     </div>
+    <div class="row">
+      <div>
+        <div class="row"><p> Email: <span id="emailPerfil"></span></p></div>
+        <div class="row"><p>Telefono: <span id="telPerfil"></span></p> </div>
+        <div class="row"><p>Edad: <span id="edadPerfil"></span></p></div>
+      </div>
+    </div>
+    <div class="container"> 
+      <button id="perfilButton" type="button" class="btn btn-primary btn-lg " data-toggle="modal" data-target="#editarPerfil" style="margin-top: 30px;">Editar perfil</button>
+    </div>
+
+    <div class="modal fade" id="editarPerfil" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"> <!--Ventana Editar-->
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Ingresa/Modifica tus datos:</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="col modal-body">
+            <form id="submitP" class="row" action="">
+              <div class="col">
+                <dt>Nombre</dt>
+                <dd><input id="nombreEdit" type="text" placeholder="Juan" required></dd>
+                <dt>Apellido</dt>
+                <dd><input id="apellidoEdit" type="text" placeholder="Pérez" required></dd>
+                <dt>Usuario</dt>
+                <dd><input id="userEdit" type="text" pattern="[a-z]{5,8}" placeholder="de 5-8 caractéres" required></dd>
+              </div>
+              <div class="col">
+                <dt>Dirección</dt>
+                <dd><input id="dirEdit" type="text" placeholder="calle 4132" required></dd>
+                <dt>Fecha de Nacimiento</dt>
+                <dd><input id="edadEdit" type="date" placeholder="01/01/2001" required></dd>
+                <dt>Teléfono fijo/celular</dt>
+                <dd><input id="telEdit" type="number" placeholder="09x-xxx-xxx" required></dd>
+              </div>
+              <div class="modal-footer">
+                <button type="button" onclick="" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button id="datosAplicados"type="button" onclick="datosEditados()" class="btn btn-primary">Aplicar</button>
+              </div>
+            </form>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+
   </div>
   <footer class="text-muted bg-light">
     <div class="container">
