--- a/cart.html
+++ b/cart.html
@@ -198,7 +198,7 @@
       <p class="float-right">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
+      <p>Lucas Podestá - JAP - 2020</p>
     </div>
   </footer>
   <div id="spinner-wrapper">
