--- a/categories.html
+++ b/categories.html
@@ -76,9 +76,10 @@
                   </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="container" id="cat-list-container">
-                </div>
+            <div class="album py-5 bg-light">
+              <div class="container">
+                  <div class="row" id="cat-list-container"></div>
+              </div>
             </div>
         </div>
     </main>
@@ -87,8 +88,7 @@
         <p class="float-right">
           <a href="#">Volver arriba</a>
         </p>
-        <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-        <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+        <p>Lucas Podestá - JAP - 2020</p>
       </div>
     </footer>
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
