--- a/products.html
+++ b/products.html
@@ -83,20 +83,22 @@
                 </div>
               </div>
           </div>
-          <div class="row">
-              <div class="list-group" id="cat-list-container">
-              </div>
+          <div class="album py-5 bg-light">
+            <div class="container">
+              <div class="row" id="prod-list-container"></div>
+            </div>
           </div>
+          
       </div>
   </main>
-    <footer class="text-muted bg-light">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Volver arriba</a>
-        </p>
-        <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-      </div>
-    </footer>
+  <footer class="text-muted bg-light">
+    <div class="container">
+      <p class="float-right">
+        <a href="#">Volver arriba</a>
+      </p>
+      <p>Lucas Podestá - JAP - 2020</p>
+    </div>
+  </footer>
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
