--- a/sell.html
+++ b/sell.html
@@ -175,10 +175,12 @@
           </div>
         </div>
       </div>
-      <footer class="text-muted">
+      <footer class="text-muted bg-light">
         <div class="container">
-            <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-            <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+          <p class="float-right">
+            <a href="#">Volver arriba</a>
+          </p>
+          <p>Lucas Podestá - JAP - 2020</p>
         </div>
       </footer>
       <div class="alert fade" role="alert" id="alertResult">
