--- a/my-profile.html
+++ b/my-profile.html
@@ -38,7 +38,7 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block nav-item" href='/'>Inicio</a>
+      <a class="py-2 d-none d-md-inline-block nav-item" href='index'>Inicio</a>
       <a class="py-2 d-none d-md-inline-block nav-item" href='categories'>Categorías</a>
       <a class="py-2 d-none d-md-inline-block nav-item" href='products'>Productos</a>
       <a class="py-2 d-none d-md-inline-block nav-item" href='sell'>Vender</a>
