--- a/products.html
+++ b/products.html
@@ -15,22 +15,39 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="site-header sticky-top py-1 bg-dark">
-      <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block nav-item" href='/'>Inicio</a>
-        <a class="py-2 d-none d-md-inline-block nav-item" href='categories'>Categorías</a>
-        <a class="py-2 d-none d-md-inline-block nav-item" href='products'>Productos</a>
-        <a class="py-2 d-none d-md-inline-block nav-item" href='sell'>Vender</a>
-        <div class="dropdown">
-          <button class="py-2 d-none d-md-inline-block nav-item dropdown-toggle" type="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
-            <a class="dropdown-item py-2 d-none d-md-inline-block" href='my-profile'>Mi Perfil</a>
-            <a id="logout" class="dropdown-item py-2 d-none d-md-inline-block " href="#">Salir</a>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">eMercado</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="container col-xs-6">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categories">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sell">Vender</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
+                  <a class="dropdown-item py-2 d-none d-md-inline-block" href='my-profile'>Mi Perfil</a>
+                  <a id="logout" class="dropdown-item py-2 d-none d-md-inline-block " href="#">Salir</a>
+                </div>
+            </li>
+          </ul>
         </div>
-      </div>
+      </div>      
     </nav>
     <main role="main" class="pb-5">
       <div class="text-center p-4">
