--- a/my-profile.html
+++ b/my-profile.html
@@ -36,22 +36,39 @@
 </head>
 
 <body>
-  <nav class="site-header sticky-top py-1 bg-dark">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block nav-item" href='index'>Inicio</a>
-      <a class="py-2 d-none d-md-inline-block nav-item" href='categories'>Categorías</a>
-      <a class="py-2 d-none d-md-inline-block nav-item" href='products'>Productos</a>
-      <a class="py-2 d-none d-md-inline-block nav-item" href='sell'>Vender</a>
-      <div class="dropdown">
-        <button class="py-2 d-none d-md-inline-block nav-item dropdown-toggle" type="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
-          <a class="dropdown-item py-2 d-none d-md-inline-block" href='my-profile'>Mi Perfil</a>
-          <a id="logout" class="dropdown-item py-2 d-none d-md-inline-block " href="#">Salir</a>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">eMercado</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="container col-xs-6">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="categories">Categorías</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sell">Vender</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
+                <a class="dropdown-item py-2 d-none d-md-inline-block" href='my-profile'>Mi Perfil</a>
+                <a id="logout" class="dropdown-item py-2 d-none d-md-inline-block " href="#">Salir</a>
+              </div>
+          </li>
+        </ul>
       </div>
-    </div>
+    </div>      
   </nav>
 <main>
   <div class="text-center p-4">
@@ -62,8 +79,11 @@
     <div class="container">                                       <!--FOTO y USUARIO-->
       <div class="row">
         <div class="col-md-4">
-          <img class=" responsive-img" id="imagenPerfil" width="200px;" src="img/user_standar.png">
-          <button class="fa fa-camera"></button>
+          <img class="foto-perfil responsive-img " id="imagenPerfil" width="200px;" src="https://i.ibb.co/k3hvPCz/Manzanas.png">
+          <div class="p-image">
+            <i class="fa fa-camera upload-button"></i>
+             <input id="avatarInput"class="file-upload" type="file" accept="image/*"/>
+          </div>
         </div>
         <div class="col-md-8">
           <div class="row">
@@ -73,7 +93,7 @@
             </div>
             <div class="col-md-4">
               <div class="container button"> 
-                <button id="perfilButton" type="button" class="btn btn-primary btn-lg " data-toggle="modal" data-target="#editarPerfil">Editar perfil</button>
+                <button id="perfilButton" type="button" class="btn btn-primary btn-lg upload-button" data-toggle="modal" data-target="#editarPerfil">Editar perfil</button>
               </div>
               <div class="modal fade" id="editarPerfil" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"> <!--Ventana Editar-->
               <div class="modal-dialog modal-dialog-centered">
@@ -118,6 +138,7 @@
       </div>
     </div>
 
+
     <div class="container shadow-sm p-3"> <!--MAIL,TEL, etc-->
           <div class="col-xs-8 tex ">
             <div class="row mt-3 border-bottom">
@@ -132,7 +153,7 @@
               <div class="col-md-6 border-right font-weight-light"><p> Edad: </span></p></div>
               <div class="col-md-6 font-weight-bold"><span id="edadPerfil"></span></div>
             </div>
-            <div class="row mt-3 border-bottom">
+            <div class="row mt-3">
               <div class="col-md-6 border-right font-weight-light"><p> Dirección: </span></p></div>
               <div class="col-md-6 font-weight-bold"><span id="dirPerfil"></span></div>
             </div>
@@ -140,7 +161,7 @@
     </div>
   </div>
 </main>
-<footer class="text-muted bg-light" style="position: fixed;">
+<footer class="text-muted bg-light" style="margin-top: 150px;">
   <div class="container">
     <p class="float-right">
       <a href="#">Volver arriba</a>
