--- a/categories.html
+++ b/categories.html
@@ -25,11 +25,11 @@
       <div class="container col-xs-6">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <li class="nav-item ">
+              <a class="nav-link" href="index">Inicio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="categories">Categorías</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="categories">Categorías<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="products">Productos</a>
