--- a/category-info.html
+++ b/category-info.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories">Categorías</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="categories">Categorías <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="products">Productos</a>
