--- a/my-profile.html
+++ b/my-profile.html
@@ -45,8 +45,8 @@
     <div class="container col-xs-6">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link" href="index">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories">Categorías</a>
@@ -57,8 +57,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell">Vender</a>
           </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span class="sr-only">(current)</span>
+                <span class="sr-only">(current)</span>
               </a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
