--- a/products.html
+++ b/products.html
@@ -24,14 +24,14 @@
       <div class="container col-xs-6">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="index">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="categories">Categorías</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="products">Productos</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="products">Productos <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sell">Vender</a>
