--- a/sell.html
+++ b/sell.html
@@ -41,8 +41,8 @@
       <div class="container col-xs-6">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="index">Inicio </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="categories">Categorías</a>
@@ -50,8 +50,8 @@
             <li class="nav-item">
               <a class="nav-link" href="products">Productos</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sell">Vender</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="sell">Vender <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
