--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                   <a class="nav-link dropdown-toggle" href="#" role="button" id="username" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item py-2 d-none d-md-inline-block" href='cart'>Mi carrito</a>
-                    <a class="dropdown-item py-2 d-none d-md-inline-block" href='my-profile'>Mi Perfil</a>
-                    <a id="logout" class="dropdown-item py-2 d-none d-md-inline-block " href="#">Salir</a>
+                    <a class="dropdown-item " href='cart'>Mi carrito</a>
+                    <a class="dropdown-item " href='my-profile'>Mi Perfil</a>
+                    <a id="logout" class="dropdown-item " href="#">Salir</a>
                   </div>
               </li>
             </ul>
