--- a/my-profile.html
+++ b/my-profile.html
@@ -80,7 +80,7 @@
     <div class="container">                                       <!--FOTO y USUARIO-->
       <div class="row">
         <div class="col-md-4">
-          <img class="foto-perfil responsive-img " id="imagenPerfil" width="200px;" src="https://i.ibb.co/k3hvPCz/Manzanas.png">
+          <img class="foto-perfil responsive-img " id="imagenPerfil" width="200px;" src="img/user_standar.png">
           <div class="p-image">
             <i class="fa fa-camera upload-button"></i>
              <input id="avatarInput"class="file-upload" type="file" accept="image/*"/>
